Temp for paths...week 5

--- a/award/award.tex
+++ b/award/award.tex
@@ -64,14 +64,14 @@
   
   \DTLforeach{names}{%   %%% these constitute running content
 		\honoree=Hname, \awardDate=Date, \creator=Cname, \typeAward=Type}{
-  \TileWallPaper{4cm}{4cm}{data/background/JOrbs.png}% Loads faster
-  \rotatebox{90}{\CenterWallPaper{0.4}{data/seal/seal.pdf}}%
+  \TileWallPaper{4cm}{4cm}{background/JOrbs.png}% Loads faster
+  \rotatebox{90}{\CenterWallPaper{0.4}{seal/seal.pdf}}%
   %\TileWallPaper{1\paperwidth}{1\paperheight}{background/old-paper.jpg}%loads slower
   \hspace*{-20pt}
 		\noindent
 		\begin{minipage}[l]{1.4in}%
 			%\noindent
-			\includegraphics[width=.85\textwidth]{data/image/Vkcmu.png}
+			\includegraphics[width=.85\textwidth]{image/Vkcmu.png}
 		\end{minipage}%
 		\hfill
  
@@ -105,7 +105,7 @@
 		  
 		  
 		  \begin{minipage}[r]{2.25in}
-			\sigskip \signature{\includegraphics[trim=2cm 1cm 0 -1cm]{data/sig.png}}{\phantom{p}{\color{DarkGreen}{\bfseries \creator}}\phantom{g} \\ Creator}
+			\sigskip \signature{\includegraphics[trim=2cm 1cm 0 -1cm]{sig.png}}{\phantom{p}{\color{DarkGreen}{\bfseries \creator}}\phantom{g} \\ Creator}
 		\end{minipage}
 		  
 		  
