--- a/award/data/seal/seal.tex
+++ b/award/data/seal/seal.tex
@@ -9,7 +9,7 @@
 \usepackage{mathpazo}
 \usepackage{datatool}
 
-\DTLloaddb{names}{../namelist.csv}
+\DTLloaddb{names}{namelist.csv}
 %
 \begin{document}
 
