--- a/award/award.tex
+++ b/award/award.tex
@@ -61,57 +61,38 @@
 \definecolor{phd}{RGB}{0,0,250}
 
   \pagestyle{empty}
-  
-  \DTLforeach{names}{%   %%% these constitute running content
-		\honoree=Hname, \awardDate=Date, \creator=Cname, \typeAward=Type}{
+   \newcount\rowIdx
+  \DTLforeach{names}
+	{\honoree=Hname, \awardDate=Date, \creator=Cname, \typeAward=Type}{
+	\DTLiflastrow{
   \TileWallPaper{4cm}{4cm}{background/JOrbs.png}% Loads faster
   \rotatebox{90}{\CenterWallPaper{0.4}{seal/seal.pdf}}%
-  %\TileWallPaper{1\paperwidth}{1\paperheight}{background/old-paper.jpg}%loads slower
   \hspace*{-20pt}
 		\noindent
 		\begin{minipage}[l]{1.4in}%
-			%\noindent
 			\includegraphics[width=.85\textwidth]{image/Vkcmu.png}
 		\end{minipage}%
 		\hfill
- 
-	%\vskip1.8em	
 	{%
 		\doublespacing	
-	%	This is to certify that \uuline{\emph{\large\sffamily\honoree}} is awesome!
-	%	That they have been awarded \typeAward by    \creator
-	%	Awarded to them on \awardDate.
-	
-	%	}		
 	This is to certify that\, \uuline{\emph{\large\sffamily\color{name}{{{\color{DarkRed}\fontfamily{frc}\selectfont{\bfseries \honoree}}}}}},
 		has been awarded the title {\bfseries \color{FireBrick}{\typeAward}}
 		at  `` Oregon State University''
-		
 		}
 		\hfill
-		
-		
-		
-		 \begin{minipage}[c]{3.4in}%
+		\begin{minipage}[c]{3.4in}%
 		 Awarded on:
 		  {\large\bfseries\color{phd}{\awardDate}}
 		  \end{minipage}%
 	    \hfill
-	    
 	    	 \begin{minipage}[c]{3.4in}%
 		 Awarded by:
-	
 		  \end{minipage}%
-		  
-		  
 		  \begin{minipage}[r]{2.25in}
 			\sigskip \signature{\includegraphics[trim=2cm 1cm 0 -1cm]{sig.png}}{\phantom{p}{\color{DarkGreen}{\bfseries \creator}}\phantom{g} \\ Creator}
-		\end{minipage}
-		  
-		  
-		  
+		\end{minipage}  
 		\pagebreak %seperate pdfs
-}
+}{}}
 
 \end{landscape}
 
