--- a/award/award.tex
+++ b/award/award.tex
@@ -32,67 +32,117 @@
 \usepackage{background}
 \usepackage{niceframe}
 
-
-%
-
 %data import
 \usepackage{datatool}
-
-
-%opening
-
-
-\DTLloaddb{names}{namelist.csv}
-\begin{document}
-\def\signature#1#2{\parbox[b]{1in}{\smash{#1}\vskip12pt}
-\hfill \parbox[t]{2.2in}{\shortstack{\vrule width 2.2in height 0.4pt\\\small#2}}}
-\def\sigskip{\vskip0.4in plus 0.1in}
-		\def\beginskip{\vskip0.5875in plus 0.1in}
-
-
-
-\begin{landscape}
-
-
+%bcolors
+%==============================================
 %\backgroundsetup{contents={background/old-paper.jpg}}
 \definecolor{title}{RGB}{180,0,0}
 \definecolor{other}{RGB}{171,0,255}
 \definecolor{name}{RGB}{255,0,0}
 \definecolor{phd}{RGB}{0,0,250}
-
-  \pagestyle{empty}
-   \newcount\rowIdx
-  \DTLforeach{names}
-	{\honoree=Hname, \awardDate=Date, \creator=Cname, \typeAward=Type}{
-	\DTLiflastrow{
+%=============================================
+%def sigs establish spacing top and bottom
+\def\signature#1#2{\parbox[b]{1in}{\smash{#1}\vskip12pt}
+\hfill \parbox[t]{2.2in}{\shortstack{\vrule width 2.2in height 0.4pt\\\small#2}}}
+\def\sigskip{\vskip0.4in plus 0.1in}
+\def\beginskip{\vskip0.5875in plus 0.1in}
+%==========================================
+%data load
+\DTLloaddb{names}{namelist.csv}
+%start document========================
+\begin{document}
+\begin{landscape}
+  %\generalframe
+\pagestyle{empty}
+ % 
+\newcount\rowIdx
+\DTLforeach{names}
+    {\honoree=Hname, \awardDate=Date, \creator=Cname, \typeAward=Type}{
+\DTLiflastrow{
+%tile the background
   \TileWallPaper{4cm}{4cm}{background/JOrbs.png}% Loads faster
+  %background image==
   \rotatebox{90}{\CenterWallPaper{0.4}{seal/seal.pdf}}%
-  \hspace*{-20pt}
-		\noindent
-		\begin{minipage}[l]{1.4in}%
+  \font\border=umrandb
+%
+  %===========Curly frame begins
+  \vspace{-2in}
+  {\centering
+  \curlyframe[.9\columnwidth]{
+		%============heading
+		{
+		\singlespacing
+		\textcolor{red!30!black!90}
+		{\small Congratulations!}
+		}
+		%verbage=====center detail
+		%{\centering
+		{\singlespacing	
+		\begin{minipage}{1\textwidth}
+	      In recognition for you valued dedication and outstanding \mbox{performance} I herby award:
+		\end{minipage}
+		} %======employee of the 
+	      \smallskip
+	      \vfill
+	      {\begin{minipage}{.375\textwidth}
+		\textcolor{red!30!black!90}
+		{\textit{Employee of the}}
+		{\bfseries \color{FireBrick}{\typeAward}}
+		\end{minipage}
+		}
+		\smallskip
+		\vfill
+		 {\begin{minipage}{.55\textwidth}
+		to:\uuline{\emph{\large\sffamily\color{name}{{{\color{DarkRed}\fontfamily{frc}\selectfont{\bfseries \honoree}}}}}}
+		\end{minipage}
+		}
+		\vspace{.5in}
+		%}
+		%
+		%Date awarded==============middle beneath
+		\begin{minipage}[c]{\linewidth}%
+		{\singlespacing
+		%\vfill
+		\vspace{1.5in}
+		    \hspace{3.5in}
+		   Awarded on:
+		   \vfill
+		   \hspace{3in}
+		    {\large\bfseries\color{phd}{\awardDate}}
+		  }%END CURLY FRAME==
+		 \end{minipage}
+		  %
+		  %creator id and signature==============bottom left
+	    {\singlespacing
+	    \vfill
+	    \hspace{-30pt}
+	%   \vspace{5in}
+		\begin{minipage}[l]{2.5in}%
+		%\vspace{3in}
+		 Awarded by:
+		 % \end{minipage}%
+		%  \begin{minipage}[b]{2.25in}
+		\sigskip \signature{\includegraphics[trim=2cm 1cm 0 -1cm]{sig.png}}{\phantom{p}{\color{DarkGreen}{\bfseries \creator}}\phantom{g} \\ Creator}
+		\end{minipage}
+		\hfill
+		%grapic========================middlle bottom
+		\hspace{.5in}
+		\begin{minipage}[l]{1.75in}%
 			\includegraphics[width=.85\textwidth]{image/Vkcmu.png}
 		\end{minipage}%
+		}%============================bottom right
 		\hfill
-	{%
-		\doublespacing	
-	This is to certify that\, \uuline{\emph{\large\sffamily\color{name}{{{\color{DarkRed}\fontfamily{frc}\selectfont{\bfseries \honoree}}}}}},
-		has been awarded the title {\bfseries \color{FireBrick}{\typeAward}}
-		at  `` Oregon State University''
+		\begin{minipage}[r]{2.25in}
+			\sigskip \signature{}{\phantom{p}Some other Dude\phantom{g} \\ Special Title}
+		\end{minipage}
+		\vfill
+ } %\end{minipage}
 		}
-		\hfill
-		\begin{minipage}[c]{3.4in}%
-		 Awarded on:
-		  {\large\bfseries\color{phd}{\awardDate}}
-		  \end{minipage}%
-	    \hfill
-	    	 \begin{minipage}[c]{3.4in}%
-		 Awarded by:
-		  \end{minipage}%
-		  \begin{minipage}[r]{2.25in}
-			\sigskip \signature{\includegraphics[trim=2cm 1cm 0 -1cm]{sig.png}}{\phantom{p}{\color{DarkGreen}{\bfseries \creator}}\phantom{g} \\ Creator}
-		\end{minipage}  
+		%
 		\pagebreak %seperate pdfs
-}{}}
+}{}
+}
 
 \end{landscape}
 
