--- a/award/data/seal/seal.tex
+++ b/award/data/seal/seal.tex
@@ -17,11 +17,12 @@
 		\honoree=Hname, \awardDate=Date, \creator=Cname, \typeAward=Type}{%
 \DTLiflastrow{
 \begin{tikzpicture}[scale=2.35,opacity=0.2]
+\definecolor{Aureolin}{rgb}{0.23, 0.27, 0.0}
 \draw[color=magenta,ultra thick,fill=violet!30] (0,0) circle (0.85cm);
-\draw [draw=none,rotate=275,postaction={decorate,decoration={text along path,reverse path, text color=DarkBlue,
+\draw [draw=none,opacity=.4,rotate=275,postaction={decorate,decoration={text along path,reverse path, text color=DarkBlue,
 text={Employee Recognition Award {\,\,\,\,} },text align={fit to path stretching spaces}}}] (0,0) circle(0.66cm);
 \draw[color=magenta,ultra thick,inner color=blue!20,outer color=Orange!30] (0,0) circle (0.55cm);
-\node[draw=none,rectangle,rounded corners=3pt,inner color=Maroon!30,outer color=Maroon!30,inner sep=1pt,text width=2.05cm,rotate=90,align=center] at (0,0) {\scriptsize\color{DarkRed} \honoree};
+\node[draw=none,rectangle,rounded corners=3pt,inner color=Maroon!30,outer color=Maroon!30,inner sep=1pt,text width=2.05cm,rotate=90,align=center] at (0,0) {\scriptsize\color{Aureolin} \honoree};
 \end{tikzpicture}
 }{}
 }
